--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    // ShadcnUi Imports
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
